syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message AccessGrantPayload {
  // The issue associated with the access grant.
  int64 issue_id = 1;

  // The target databases for this access grant.
  // Format: instances/{instance}/databases/{database}
  repeated string targets = 2;

  // The query permission granted.
  string query = 3;

  // Whether the grant allows unmasking sensitive data.
  bool unmask = 4;
}
